--- a/now.html
+++ b/now.html
@@ -75,21 +75,22 @@
 		    `<td class='remaining'><img src='images/spacer.gif' width=1 height=1 alt=''></td></tr></table></td>` +
 		    `<td class='col_channel'><div class='channel_name'>`;
 	if (cookies.ICONS && c.icon_public_url) {
-          s += `<img src="/${c.icon_public_url}" height='48' width='80' alt="${name}" title="${name}">`;
+          s += `<img src="${c.icon_public_url}" height='48' width='80' alt="${name}" title="${name}">`;
         }
 	else s += `${name}</div>`;
+	      s += `<td class='col_stream'><a href='/stream/channel/${c.uuid}'><img src='images/play.png' title='Play'></a></td>`;
 	s += `</div></td><td class='col_title'><div class='epg_title'>${e.title}</div><div class='epg_subtitle'>${summ}</div></td>`;
 	if (!e.dvrState || e.dvrState != 'scheduled' && e.dvrState != 'recording') {
-	  s += `<td><a href='now.html' onclick='create_by_event(event, "${e.eventId}", this)'><img src='images/rec_button1.png' alt='record' title='record'></a></td>`;
+	  s += `<td><a href='now.html' onclick='create_by_event(event, "${e.eventId}", this)'><img src='images/rec_button.png' alt='record' title='record'></a></td>`;
 	}
 	else {
 	  s += "<td><img src='images/rec.png' alt='Recording' title='Recording'></td>";
 	}
       }
       else {
-        var s = `<td></td><td class='col_channel'><div class='channel_name'>${name}</div></td><td>No EPG available</td><td></td>`;
+        var s = `<td></td><td class='col_channel'><div class='channel_name'>${name}</div></td><td class='col_stream'><a href='/stream/channel/${c.uuid}'><img src='images/play.png' title='Play'></a></td><td></td>`;
       }
-      s += `<td class='col_stream'><a href='/play/stream/channel/${c.uuid}?title=${c.name}'><img src='images/play.png' title='Play'></a></td>`;
+      s += ``;
       row.innerHTML = s;
       i++;
     }
